<resources>
    //Nome App
    <string name="app_name">Rick and Morty</string>

    //Tela de Splash
    <string name="button1">AGITE O CELULAR PARA ENTRAR</string>
    //Tela Home
    <string name="textper">ﾠﾠﾠﾠPERSONAGENS...</string>
    <string name="texttemp">ﾠﾠﾠﾠTEMPORADAS...</string>
    <string name="textnovidade">ﾠﾠﾠﾠNOVIDADES...</string>
    <string name="textquiz">ﾠﾠﾠﾠSerá que você realmente é fã da série "Rick and Morty"?! Teste agora ﾠﾠﾠﾠseus conhecimentos, aperte no botão abaixo e faça agora o teste.</string>
    <string name="btnquiz">LOCALIZAÇÃO</string>
    <string name="pergloc">ONDE SERÁ QUE ACONTECE O DESENVOLVIMENTO DA SÉRIE RICK AND MORTY?</string>
    <string name="loc">ACESSAR LOCALIZAÇÃO</string>
    //Tela do Menu
    <string name="btnhomemenu">HOME</string>
    <string name="btnpershome">PERSONAGENS</string>
    <string name="btntempmenu">TEMPORADAS</string>
    <string name="btnquizmenu">LOCALIZAÇÃO</string>
    <string name="btncontato">CONTATO</string>
    <string name="btnsairmenu">SAIR</string>
    //Text presentes em todas as páginas referente aos personagens
    <string name="idadepers">IDADE:</string>
    <string name="apelidopers">APELIDO:</string>
    <string name="sexopers">SEXO:</string>
    <string name="sobrepers">SOBRE:</string>

    //Tela do Personagem "Rick Sanchez"
    <string name="nomerick">RICK SANCHEZ</string>
    <string name="apelidorick">Pickle Rick, Rickzinho</string>
    <string name="idaderick">73 anos</string>
    <string name="sexorick">Masculino</string>
    <string name="sobrerick">Rick é um cientista totalmente louco, após desaparecer por 20 anos, retorna para a sua família e começa a sair em diversas aventuras com seu neto, Morty.</string>

    //Tela do personagem "Morty Smith"
    <string name="nomemorty">MORTY SMITH</string>
    <string name="apelidomorty">Morty Prime, Mortyeist Morty</string>
    <string name="idademorty">14 anos</string>
    <string name="sexomorty">Masculino</string>
    <string name="sobremorty">Morty é um dos dois personagens protagonias da série. Ele é neto de Rick e muita das vezes é obrigado a participar das suas várias desventuras. Morty frequenta Harry Herpson School junto com sua irmã, Summer.</string>

    //Tela do personagem "Summer Smith"
    <string name="nomesummer">SUMMER SMITH</string>
    <string name="apelidosummer">Sum-Sum (de acordo com seu irmão Morty).</string>
    <string name="idadesummer">17 anos</string>
    <string name="sexosummer">Feminino</string>
    <string name="sobresummer">Summer é a filha adolescente de Beth e Jerry. Ela é a irmã mais velha de Morty e a neta de Rick da Dimensão C-137, sendo ela o único membro da família a estar ciente desse fato.</string>

    //Tela do personagem "Jerry Smith"
    <string name="nomejerry">JERRY SMITH</string>
    <string name="idadejerry">35 anos</string>
    <string name="sexojerry">Masculino</string>
    <string name="sobrejerry">Jerry é casado com Beth, sendo ele o pai de Morty e Summer Smith. Consideram-o como um dos memmbros menos inteligentes da família, retratando em sua pesonalidade ser um perdedor e incompetente, não conseguindo se livrar de nenhum problema sozinho, além de ser desempregado.</string>

    //Tela do personagem "Beth Smith"
    <string name="nomebeth">BETH SMITH</string>
    <string name="idadebeth">34 anos</string>
    <string name="sexobeth">Feminino</string>
    <string name="sobrebeth">Beth Smith da dimensão C-131 é um dos dois tritagonistas (ao lado de seu marido Jerry Smith) da série. Ela é filha de Rick, e mãe de Summer e do Falecido Morty. Atualmente atua como mãe e filha de Morty e Rick da Dimensão Cronenberged, respectivamente. E trabalha como veterinária no St. Equis Hospital.</string>

    //Tela primeira temporada
    <string name="temps">ﾠﾠﾠﾠRICK AND MORY</string>
    <string name="resumo">ﾠﾠApós ficar desaparecido por vinte anos, o cientista maluco Rick Sanchez vai morar na casa de sua filha e acaba envolvendo Morty, seu neto, nas aventuras mais bizzaras.</string>
    <string name="primeiratemp">ﾠﾠﾠﾠPRIMEIRA TEMPORADA...</string>
    <string name="resumoprimeira">ﾠﾠA primeira temporada da série Rick and Morty conta com 11 episódios inéditos, ela foi exibida pela primeira vez em 2 de dezembro de 2013, na televisão estado-unidense, Adult Swin.ﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠ</string>
    <string name="trailer1">ﾠﾠﾠﾠTRAILER - PRIMEIRA TEMPORADA...</string>
    <string name="btnlink">ASSISTIR TEMPORADA COMPLETA</string>

    //Tela segunda temporada
    <string name="segundatemp">ﾠﾠﾠﾠSEGUNDA TEMPORADA...</string>
    <string name="resumosegundo">ﾠﾠA segunda temporada da série Rick and Morty possuí 10 episódios. Seu lançamento ocorreu no dia 26 de Julho de 2015, na televisão estado-unidense, Adult Swin.ﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠ</string>
    <string name="trailer2">ﾠﾠﾠﾠTRAILER - SEGUNDA TEMPORADA...</string>

    //Tela terceira temporada
    <string name="terceiratemp">ﾠﾠﾠﾠTERCEIRA TEMPORADA...</string>
    <string name="resumoterceira">ﾠﾠA terceira temporada da série Rick and Morty possuí 10 episódios. Seu lançamento ocorreu no dia 30 de Julho de 2017, na televisão estado-unidense, Adult Swin.ﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠ</string>
    <string name="trailer3">ﾠﾠﾠﾠTRAILER - TERCEIRA TEMPORADA...</string>

    //Tela quarta temporada
    <string name="quartatemp">ﾠﾠﾠﾠQUARTA TEMPORADA...</string>
    <string name="resumoquarta">ﾠﾠA terceira temporada da série Rick and Morty possuí 10 episódios. Seu lançamento ocorreu no dia 10 de Novembro de 2019, na televisão estado-unidense, Adult Swin.ﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠ</string>
    <string name="trailer4">ﾠﾠﾠﾠTRAILER - QUARTA TEMPORADA...</string>

    //Tela quinta temporada
    <string name="quintatemp">ﾠﾠﾠﾠQUINTA TEMPORADA...</string>
    <string name="resumoquinta">ﾠﾠA terceira temporada da série Rick and Morty possuí 10 episódios. Seu lançamento ocorreu no dia 05 de setembro de 2021, na televisão estado-unidense, Adult Swin.ﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠ</string>
    <string name="trailer5">ﾠﾠﾠﾠTRAILER - QUINTA TEMPORADA...</string>

    //Tela sexta temporada
    <string name="sextatemp">ﾠﾠﾠﾠSEXTA TEMPORADA...</string>
    <string name="resumosexta">ﾠﾠA terceira temporada da série Rick and Morty possuí até então 03 episódios já estreados. Seu lançamento ocorreu no dia 04 de setembro de 2022, na televisão estado-unidense, Adult Swin.ﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠﾠ</string>
    <string name="trailer6">ﾠﾠﾠﾠTRAILER - SEXTA TEMPORADA...</string>

    //Tela de Contato
    <string name="cont">ENTRE EM CONTATO CONOSCO:</string>
    <string name="enderecoemail"></string>
    <string name="emaildefinid">rickandmorty@gmail.com</string>
    <string name="email">PARA:</string>
    <string name="subject">ASSUNTO:</string>
    <string name="message">MENSAGEM:</string>
    <string name="send">ENVIAR</string>

</resources>

