<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".temporada3">

    <Button
        android:id="@+id/btnhome11"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="1dp"
        android:background="#00FFFFFF"
        app:icon="@android:drawable/ic_menu_sort_by_size"
        app:iconSize="40dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/scrollView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgtopo11"
        android:layout_width="159dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="126dp"
        android:elevation="20dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285"
        app:srcCompat="@drawable/logobranca2" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="410dp"
        android:layout_height="690dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="425dp"
                android:layout_height="245dp"
                android:onClick="btnhomemenu"
                app:srcCompat="@drawable/terceiratemporada" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/temps"
                android:textSize="16sp" />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="30dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/resumo"
                android:textAlignment="gravity"
                android:textColor="#8CFFFFFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/terceiratemp"
                android:textSize="16sp" />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:layout_marginLeft="30dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/resumoterceira"
                android:textAlignment="gravity"
                android:textColor="#8CFFFFFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/trailer3"
                android:textSize="16sp" />

            <FrameLayout
                android:layout_width="410dp"
                android:layout_height="250dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp">

                <VideoView
                    android:id="@+id/videoView2"
                    android:layout_width="match_parent"
                    android:layout_height="250dp" />
            </FrameLayout>

            <Button
                android:id="@+id/btnlink1"
                android:layout_width="365dp"
                android:layout_height="58dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="1dp"
                android:backgroundTint="@color/verde"
                android:fontFamily="sans-serif-black"
                android:text="@string/btnlink"
                android:textColor="@color/white"
                android:textSize="15dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>