<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundooo"
    tools:context=".menu">

    <Button
        android:id="@+id/btnhome2"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="1dp"
        android:background="#00FFFFFF"
        android:onClick="btnhomemenu"
        app:icon="@android:drawable/ic_menu_sort_by_size"
        app:iconSize="40dp"
        app:iconTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgtopo3"
        android:layout_width="159dp"
        android:layout_height="41dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logobranca2" />

    <Button
        android:id="@+id/btnquizmenu"
        android:layout_width="340dp"
        android:layout_height="72dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/verde"
        android:fontFamily="sans-serif-black"
        android:text="@string/btnquizmenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnhomemenu" />

    <Button
        android:id="@+id/btnhomemenu"
        android:layout_width="340dp"
        android:layout_height="72dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/verde"
        android:fontFamily="sans-serif-black"
        android:onClick="btnhomemenu"
        android:text="@string/btnhomemenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgtopo3" />

    <Button
        android:id="@+id/btnlojamenu"
        android:layout_width="340dp"
        android:layout_height="72dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/verde"
        android:fontFamily="sans-serif-black"
        android:text="@string/btnlojamenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnquizmenu" />

    <Button
        android:id="@+id/btnsairmenu"
        android:layout_width="340dp"
        android:layout_height="72dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/verde"
        android:fontFamily="sans-serif-black"
        android:text="@string/btnsairmenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnlojamenu" />

</androidx.constraintlayout.widget.ConstraintLayout>